--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-animate-on-scroll": "^2.1.5",
         "react-dom": "^17.0.2",
         "react-image-lightbox": "^5.1.3",
+        "react-lazy-load-image-component": "^1.5.4",
         "react-modal-video": "^1.2.8",
         "react-owl-carousel3": "^2.2.5",
         "react-simple-typewriter": "^3.0.1",
